custom/themes/hwtc/sass/partials/_core.scss
body {
    background: #fafafa;
    color: #092148;
    color: $body_background;
    font-family: $latolight;
}

img {

    max-width: 100%;
    //width: 100%;
}

.wrapper {

    @include transition(transform 500ms ease);
    background-color: #FAFAFA;
    position: relative;
    z-index: 2000;
}

em, i {
    font-family: $latoitalic;
    line-height: 2.5em;
}

i {
    color: #2c65b5;
}

